--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "dayjs": "^1.11.6",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.14.0",
@@ -28,6 +29,7 @@
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
