--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/less": "^3.0.3",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -21,21 +22,22 @@
     "dayjs": "^1.11.6",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.14.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
-    "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-scripts-less start",
+    "build": "react-scripts-less build",
+    "test": "react-scripts-less test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -56,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts-less": "^5.0.4"
   }
 }
