--- a/package.json
+++ b/package.json
@@ -12,29 +12,17 @@
     "@mui/styled-engine-sc": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.9.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/less": "^3.0.3",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/uuid": "^8.3.4",
-    "dayjs": "^1.11.6",
-    "eslint-config-prettier": "^8.5.0",
-    "firebase": "^9.14.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "firebase": "^9.14.0",
+    "dayjs": "^1.11.6",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.4.2",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -63,6 +51,14 @@
     ]
   },
   "devDependencies": {
-    "react-scripts-less": "^5.0.4"
+    "typescript": "^4.4.2",
+    "@types/jest": "^27.0.1",
+    "@types/less": "^3.0.3",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
+    "react-scripts-less": "^5.0.4",
+    "eslint-config-prettier": "^8.5.0"
   }
 }
